fix overflow bug

--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ header nav a.btn {
     color: var(--white);
     letter-spacing: 11.6px;
     text-align: center;
-    padding: 5vw;
+    /* padding: 5vw; */
 }
 
 /*=====ABOUT ====*/
